--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lexical/react": "^0.7.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@types/sanitize-html": "^2.6.2",
+    "lexical": "^0.7.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
+    "sanitize-html": "^2.8.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
