--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/sanitize-html": "^2.6.2",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
