--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@supabase/supabase-js": "^2.2.1",
     "@types/sanitize-html": "^2.6.2",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
