--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "axios": "^1.2.1",
+    "formidable": "^2.1.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
@@ -19,6 +21,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
