--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -13,20 +13,21 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
     "@supabase/supabase-js": "^2.2.1",
-    "@types/sanitize-html": "^2.6.2",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
-    "sanitize-html": "^2.8.0",
+    "sanitize-html": "^2.8.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.2.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
@@ -36,6 +37,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
+    "prisma-erd-generator": "^1.2.4",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4"
   },
