--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.5.0",
+    "@prisma/client": "^4.8.0",
     "@supabase/supabase-js": "^2.2.1",
     "@types/sanitize-html": "^2.6.2",
     "axios": "^1.2.1",
@@ -23,6 +23,7 @@
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
     "sanitize-html": "^2.8.1",
+    "swr": "^2.0.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
+    "prisma": "^4.8.0",
     "prisma-erd-generator": "^1.2.4",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4"
