--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
+    "@prisma/generator-helper": "^4.0.0",
     "@supabase/supabase-js": "^2.2.1",
-    "@types/sanitize-html": "^2.6.2",
     "axios": "^1.2.1",
     "formidable": "^2.1.1",
     "next": "13.0.2",
@@ -22,7 +22,6 @@
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
-    "sanitize-html": "^2.8.1",
     "swr": "^2.0.0",
     "zod": "^3.18.0"
   },
@@ -32,7 +31,6 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
