--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
     "@prisma/generator-helper": "^4.0.0",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@supabase/supabase-js": "^2.2.1",
     "axios": "^1.2.1",
     "formidable": "^2.1.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "phosphor-react": "^1.4.1",
+    "quantize": "^1.0.2",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
@@ -26,7 +28,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^9.2.2",
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@types/formidable": "^2.0.5",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
