--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
     "@prisma/generator-helper": "^4.0.0",
+    "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.2",
     "@supabase/supabase-js": "^2.2.1",
+    "allotment": "^1.18.1",
     "axios": "^1.2.1",
     "formidable": "^2.1.1",
     "next": "13.0.2",
@@ -23,6 +26,8 @@
     "quantize": "^1.0.2",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "swr": "^2.0.0",
     "zod": "^3.18.0"
