--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formidable": "^2.1.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
+    "node-vibrant": "^3.1.6",
     "phosphor-react": "^1.4.1",
     "quantize": "^1.0.2",
     "react": "18.2.0",
