--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "phosphor-react": "^1.4.1",
     "quantize": "^1.0.2",
     "react": "18.2.0",
-    "react-contenteditable": "^3.3.6",
+    "react-contenteditable": "^3.3.7",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "swr": "^2.0.0",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
