--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hammertail2",
-  "version": "0.1.0",
+  "name": "hammertail",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "build": "next build",
