--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
-    "@prisma/generator-helper": "^4.0.0",
-    "@radix-ui/react-accordion": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.0.2",
-    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@prisma/generator-helper": "^4.11.0",
+    "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.3",
     "@supabase/supabase-js": "^2.10.0",
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
     "formidable": "^2.1.1",
-    "next": "13.0.2",
+    "next": "13.2.4",
     "next-auth": "^4.20.1",
-    "node-vibrant": "^3.1.6",
+    "node-vibrant": "3.2.1-alpha.1",
     "phosphor-react": "^1.4.1",
     "quantize": "^1.0.2",
     "react": "18.2.0",
@@ -35,23 +35,23 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^9.3.0",
+    "@mermaid-js/mermaid-cli": "^10.0.2",
     "@types/formidable": "^2.0.5",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "13.0.2",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
+    "@types/node": "^18.15.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "13.2.4",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "prisma": "^4.11.0",
-    "prisma-erd-generator": "^1.2.4",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4"
+    "prisma-erd-generator": "^1.2.5",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.3"
