--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "formidable": "^2.1.1",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
-    "node-vibrant": "3.2.1-alpha.1",
+    "node-vibrant": "^3.1.6",
     "phosphor-react": "^1.4.1",
     "quantize": "^1.0.2",
     "react": "18.2.0",
