--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.10.0",
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
+    "csstype": "^3.0.10",
     "formidable": "^2.1.1",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
@@ -30,6 +31,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "swr": "^2.1.0",
     "zod": "^3.21.4",
     "zustand": "^4.3.6"
