--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@supabase/supabase-js": "^2.10.0",
+    "@vercel/analytics": "^0.1.11",
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
     "csstype": "^3.0.10",
