--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@phosphor-icons/react": "^2.0.8",
     "@prisma/client": "^4.11.0",
     "@prisma/generator-helper": "^4.11.0",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@supabase/supabase-js": "^2.10.0",
     "@tanstack/react-query": "^4.28.0",
     "@vercel/analytics": "^0.1.11",
+    "add": "^2.0.6",
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
     "csstype": "^3.0.10",
@@ -26,7 +29,6 @@
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "node-vibrant": "^3.1.6",
-    "phosphor-react": "^1.4.1",
     "quantize": "^1.0.2",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.7",
