--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.26.5",
+    "@blocknote/core": "^0.5.1",
+    "@blocknote/react": "^0.5.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@phosphor-icons/react": "^2.0.8",
     "@prisma/client": "^4.11.0",
@@ -21,16 +22,20 @@
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@supabase/supabase-js": "^2.10.0",
     "@tanstack/react-query": "^4.28.0",
+    "@tiptap/core": "^2.0.2",
+    "@tiptap/pm": "^2.0.2",
     "@vercel/analytics": "^0.1.11",
     "add": "^2.0.6",
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
     "csstype": "^3.0.10",
     "formidable": "^2.1.1",
-    "hammertail-text-editor": "^0.0.3",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "node-vibrant": "^3.1.6",
+    "prosemirror-model": "^1.19.0",
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-view": "^1.30.2",
     "quantize": "^1.0.2",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.7",
