--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
     "csstype": "^3.0.10",
+    "enchanto": "^0.0.20",
     "formidable": "^2.1.1",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
