--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@blocknote/core": "^0.5.1",
-    "@blocknote/react": "^0.5.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@phosphor-icons/react": "^2.0.8",
     "@prisma/client": "^4.11.0",
@@ -22,24 +20,22 @@
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@supabase/supabase-js": "^2.10.0",
     "@tanstack/react-query": "^4.28.0",
-    "@tiptap/core": "^2.0.2",
-    "@tiptap/pm": "^2.0.2",
     "@vercel/analytics": "^0.1.11",
     "add": "^2.0.6",
     "allotment": "^1.18.1",
     "axios": "^1.3.4",
     "csstype": "^3.0.10",
-    "enchanto": "^0.0.20",
+    "enchanto": "^0.0.233",
     "formidable": "^2.1.1",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "node-vibrant": "^3.1.6",
-    "prosemirror-model": "^1.19.0",
-    "prosemirror-state": "^1.4.2",
-    "prosemirror-view": "^1.30.2",
+    "prop-types": "^15.8.1",
     "quantize": "^1.0.2",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.7",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "zod": "^3.21.4",
