--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "next dev -p 3000",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "vercel-build": "prisma generate && prisma migrate deploy && prisma db seed && next build"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -58,6 +62,7 @@
     "prettier-plugin-tailwindcss": "^0.2.4",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
