--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.0.2",
+    "@testing-library/cypress": "^9.0.0",
     "@types/formidable": "^2.0.5",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
@@ -61,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.16.0",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.4.0",
     "postcss": "^8.4.23",
