--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "add": "^2.0.6",
     "allotment": "^1.19.0",
     "axios": "^1.4.0",
+    "base64-arraybuffer": "^1.0.2",
     "csstype": "^3.1.2",
     "formidable": "^2.1.1",
     "next": "13.4.7",
