--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "base64-arraybuffer": "^1.0.2",
     "csstype": "^3.1.2",
     "formidable": "^2.1.2",
+    "jotai": "^2.2.2",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "node-vibrant": "^3.1.6",
@@ -47,8 +48,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.9"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.2.2",
