--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "base64-arraybuffer": "^1.0.2",
     "csstype": "^3.1.2",
     "formidable": "^2.1.2",
+    "jotai": "^2.2.2",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "node-vibrant": "^3.1.6",
