--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hammertail",
-  "version": "0.0.6",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -8,7 +8,7 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "vercel-build": "prisma db seed && next build"
+    "vercel-build": "prisma generate && prisma db seed && next build"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
