--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@supabase/supabase-js": "^2.26.0",
     "@tanstack/react-query": "^4.29.19",
