--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^4.29.19",
     "@tiptap/core": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
+    "@types/uuid": "^9.0.3",
     "@vercel/analytics": "^1.0.1",
     "add": "^2.0.6",
     "allotment": "^1.19.0",
@@ -49,6 +50,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
