--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
     "@supabase/supabase-js": "^2.26.0",
     "@tanstack/react-query": "^4.29.19",
     "@tiptap/core": "^2.0.3",
